--- a/Templets/index.html
+++ b/Templets/index.html
@@ -131,7 +131,7 @@
     }
 
     .app {
-        background-image: url("{{url_for('static',filename = 'Children 2.jpg')}}"),
+        background-image: url("{{url_for('static',filename = 'images_score.png')}}"),
         repeating-linear-gradient(45deg, rgb(83, 83, 83) 0px, rgb(83, 83, 83) 50px, rgb(124, 124, 124) 50px, rgb(124, 124, 124) 100px);
         background-repeat: no-repeat;
         background-size: 100%;
