--- a/Templets/index.html
+++ b/Templets/index.html
@@ -14,7 +14,7 @@
 
     <form class="app" method="POST" action="/predict">
         <div id="final_price">
-           Average Score:  {{ Average }}
+           STUDENT PERFORMANCE
 
         </div>
 
